infra/k8s/api-gateway.yaml
---
# 1. DEPLOYMENT: Define la aplicación y cuántas réplicas queremos
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  labels:
    app: api-gateway
spec:
  replicas: 2 # Levantaremos 2 instancias para alta disponibilidad
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: omnipay/api-gateway:latest
        imagePullPolicy: Never # Obliga a K8s a usar la imagen local, no buscar en Docker Hub
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"

---
# 2. SERVICE: Balanceador de carga interno del clúster
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80       # El puerto que expone el servicio dentro del clúster
      targetPort: 3000 # El puerto donde escucha tu contenedor Node.js
  type: ClusterIP

---
# 3. INGRESS: La puerta de entrada desde tu navegador (localhost) hacia el Service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 80
